--- a/model/feature_explore.ipynb
+++ b/model/feature_explore.ipynb
@@ -1,8 +1,35 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 预测2016.11.01-2016.11.14客户流量.结果为非负整数。\n",
+    "- 提供2015.07.01到2016.10.31（除去2015.12.12）的商家数据，用户支付行为数据以及用户浏览行为数据。\n",
+    "- 提供数据的类型统一为string类型，提交预测的类型为整形。文件统一为utf-8编码，没有标题行，并以“,”分隔的csv格式。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 供参考的特征生成方法\n",
+    "\n",
+    "- centrality measures (mostly median) on sales of the same store/weekday/promo during last 3, 6, 12 and 24 months (some spread measures too but they were more prone to overfitting)\n",
+    "- linear model (ridge) predictions for each store on weekday/promo/dayssince2000 on last 3 and 12 months to help the tree model extrapolate\n",
+    "- number of schoolholidays this week, last week and next week\n",
+    "- aggregates by store (avg sales per customer, promo sales ratio, saturday sales ratio, holiday sales ratio)\n",
+    "- daycounters (before, during and after) for things like position within promo cycle, promo2 cycle, summerholidays and refurbishments\n",
+    "\n",
+    "External data that were posted to the forum by others (big thanks!):\n",
+    "\n",
+    "- maxtemp and precipmm from the weather files by state\n",
+    "- summerholiday start dates\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -25,7 +52,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "shop_info_col=['shop_id','city_name','location_id','per_pay','score','comment_cnt','shop_level','cate_1_name','cate_2_name','cate_3_name']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>shop_id</th>\n",
+       "      <th>city_name</th>\n",
+       "      <th>location_id</th>\n",
+       "      <th>per_pay</th>\n",
+       "      <th>score</th>\n",
+       "      <th>comment_cnt</th>\n",
+       "      <th>shop_level</th>\n",
+       "      <th>cate_1_name</th>\n",
+       "      <th>cate_2_name</th>\n",
+       "      <th>cate_3_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>湖州</td>\n",
+       "      <td>885</td>\n",
+       "      <td>8</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>美食</td>\n",
+       "      <td>休闲茶饮</td>\n",
+       "      <td>饮品/甜点</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>哈尔滨</td>\n",
+       "      <td>64</td>\n",
+       "      <td>19</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>超市便利店</td>\n",
+       "      <td>超市</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>南昌</td>\n",
+       "      <td>774</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>美食</td>\n",
+       "      <td>休闲茶饮</td>\n",
+       "      <td>奶茶</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>天津</td>\n",
+       "      <td>380</td>\n",
+       "      <td>18</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>超市便利店</td>\n",
+       "      <td>超市</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>杭州</td>\n",
+       "      <td>263</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>美食</td>\n",
+       "      <td>休闲食品</td>\n",
+       "      <td>生鲜水果</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   shop_id city_name  location_id  per_pay  score  comment_cnt  shop_level  \\\n",
+       "0        1        湖州          885        8    4.0         12.0           2   \n",
+       "1        2       哈尔滨           64       19    NaN          NaN           1   \n",
+       "2        3        南昌          774        5    3.0          2.0           0   \n",
+       "3        4        天津          380       18    NaN          NaN           1   \n",
+       "4        5        杭州          263        2    2.0          2.0           0   \n",
+       "\n",
+       "  cate_1_name cate_2_name cate_3_name  \n",
+       "0          美食        休闲茶饮       饮品/甜点  \n",
+       "1       超市便利店          超市         NaN  \n",
+       "2          美食        休闲茶饮          奶茶  \n",
+       "3       超市便利店          超市         NaN  \n",
+       "4          美食        休闲食品        生鲜水果  "
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "shop_info=pd.read_csv('../dataset/shop_info.txt',header=None)\n",
+    "shop_info.columns=shop_info_col\n",
+    "\n",
+    "shop_info.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -38,20 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "data_pay=pd.read_csv('../dataset/user_pay.txt',header=None)\n",
-    "\n",
-    "data_pay.columns=data_col"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -72,33 +222,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>22127870</td>\n",
-       "      <td>1862</td>\n",
-       "      <td>2015-12-25 17:00:00</td>\n",
+       "      <td>13201967</td>\n",
+       "      <td>1197</td>\n",
+       "      <td>2016-10-21 18:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>3434231</td>\n",
-       "      <td>1862</td>\n",
-       "      <td>2016-10-05 11:00:00</td>\n",
+       "      <td>19461365</td>\n",
+       "      <td>1197</td>\n",
+       "      <td>2016-06-28 23:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>16955285</td>\n",
-       "      <td>1862</td>\n",
-       "      <td>2016-02-10 15:00:00</td>\n",
+       "      <td>15022321</td>\n",
+       "      <td>1197</td>\n",
+       "      <td>2016-07-16 19:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>13799128</td>\n",
-       "      <td>1862</td>\n",
-       "      <td>2016-01-13 14:00:00</td>\n",
+       "      <td>5440872</td>\n",
+       "      <td>1197</td>\n",
+       "      <td>2016-07-15 07:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>13799128</td>\n",
-       "      <td>1862</td>\n",
-       "      <td>2016-07-05 12:00:00</td>\n",
+       "      <td>12594529</td>\n",
+       "      <td>1197</td>\n",
+       "      <td>2016-08-07 16:00:00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -106,25 +256,28 @@
       ],
       "text/plain": [
        "    user_id  shop_id           time_stamp\n",
-       "0  22127870     1862  2015-12-25 17:00:00\n",
-       "1   3434231     1862  2016-10-05 11:00:00\n",
-       "2  16955285     1862  2016-02-10 15:00:00\n",
-       "3  13799128     1862  2016-01-13 14:00:00\n",
-       "4  13799128     1862  2016-07-05 12:00:00"
+       "0  13201967     1197  2016-10-21 18:00:00\n",
+       "1  19461365     1197  2016-06-28 23:00:00\n",
+       "2  15022321     1197  2016-07-16 19:00:00\n",
+       "3   5440872     1197  2016-07-15 07:00:00\n",
+       "4  12594529     1197  2016-08-07 16:00:00"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_pay.head()"
+    "data_pay=pd.read_csv('../dataset/user_view.txt',header=None)\n",
+    "data_pay.columns=data_col\n",
+    "\n",
+    "data_pay.head(15)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -135,18 +288,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 62,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "data_pay['data']=data_pay.time_stamp.dt.date"
+    "data_pay['data']=data_pay.time_stamp.dt.date\n",
+    "#data_pay['day']=data_pay.time_stamp.dt.day\n",
+    "#data_pay['dayofweek']=data_pay.time_stamp.dt.dayofweek\n",
+    "#data_pay['month']=data_pay.time_stamp.dt.month"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 63,
    "metadata": {
     "collapsed": false
    },
@@ -163,58 +319,76 @@
        "      <th>shop_id</th>\n",
        "      <th>time_stamp</th>\n",
        "      <th>data</th>\n",
+       "      <th>day</th>\n",
+       "      <th>dayofweek</th>\n",
+       "      <th>month</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>22127870</td>\n",
-       "      <td>1862</td>\n",
-       "      <td>2015-12-25 17:00:00</td>\n",
-       "      <td>2015-12-25</td>\n",
+       "      <td>13201967</td>\n",
+       "      <td>1197</td>\n",
+       "      <td>2016-10-21 18:00:00</td>\n",
+       "      <td>2016-10-21</td>\n",
+       "      <td>21</td>\n",
+       "      <td>4</td>\n",
+       "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>3434231</td>\n",
-       "      <td>1862</td>\n",
-       "      <td>2016-10-05 11:00:00</td>\n",
-       "      <td>2016-10-05</td>\n",
+       "      <td>19461365</td>\n",
+       "      <td>1197</td>\n",
+       "      <td>2016-06-28 23:00:00</td>\n",
+       "      <td>2016-06-28</td>\n",
+       "      <td>28</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>16955285</td>\n",
-       "      <td>1862</td>\n",
-       "      <td>2016-02-10 15:00:00</td>\n",
-       "      <td>2016-02-10</td>\n",
+       "      <td>15022321</td>\n",
+       "      <td>1197</td>\n",
+       "      <td>2016-07-16 19:00:00</td>\n",
+       "      <td>2016-07-16</td>\n",
+       "      <td>16</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>13799128</td>\n",
-       "      <td>1862</td>\n",
-       "      <td>2016-01-13 14:00:00</td>\n",
-       "      <td>2016-01-13</td>\n",
+       "      <td>5440872</td>\n",
+       "      <td>1197</td>\n",
+       "      <td>2016-07-15 07:00:00</td>\n",
+       "      <td>2016-07-15</td>\n",
+       "      <td>15</td>\n",
+       "      <td>4</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>13799128</td>\n",
-       "      <td>1862</td>\n",
-       "      <td>2016-07-05 12:00:00</td>\n",
-       "      <td>2016-07-05</td>\n",
+       "      <td>12594529</td>\n",
+       "      <td>1197</td>\n",
+       "      <td>2016-08-07 16:00:00</td>\n",
+       "      <td>2016-08-07</td>\n",
+       "      <td>7</td>\n",
+       "      <td>6</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    user_id  shop_id          time_stamp        data\n",
-       "0  22127870     1862 2015-12-25 17:00:00  2015-12-25\n",
-       "1   3434231     1862 2016-10-05 11:00:00  2016-10-05\n",
-       "2  16955285     1862 2016-02-10 15:00:00  2016-02-10\n",
-       "3  13799128     1862 2016-01-13 14:00:00  2016-01-13\n",
-       "4  13799128     1862 2016-07-05 12:00:00  2016-07-05"
+       "    user_id  shop_id          time_stamp        data  day  dayofweek  month\n",
+       "0  13201967     1197 2016-10-21 18:00:00  2016-10-21   21          4     10\n",
+       "1  19461365     1197 2016-06-28 23:00:00  2016-06-28   28          1      6\n",
+       "2  15022321     1197 2016-07-16 19:00:00  2016-07-16   16          5      7\n",
+       "3   5440872     1197 2016-07-15 07:00:00  2016-07-15   15          4      7\n",
+       "4  12594529     1197 2016-08-07 16:00:00  2016-08-07    7          6      8"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,36 +399,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 82,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "feature_daypay=pd.DataFrame(data_pay.groupby(['shop_id','data'])['user_id'].count())"
+    "feature_daypay=pd.DataFrame(data_pay.groupby(['shop_id','data'])['user_id'].count())\n",
+    "feature_daypay.rename(columns={'user_id':'daypay'},inplace=True)\n",
+    "feature_daypay.to_csv('../tempfile/feature_daypay.csv')\n",
+    "feature_daypay=pd.read_csv('../tempfile/feature_daypay.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "feature_daypay.rename(columns={'user_id':'daypay'},inplace=True)"
+    "# 14天的预测值 \n",
+    "# 分割数据集\n",
+    "\n",
+    "#  2016-10-18  2016-10-31\n",
+    "#  2016-10-3  2016-10-17\n",
+    "\n",
+    "# 过去一周平均业绩\n",
+    "#  过去一个月平均业绩\n",
+    "# 过去3个月平均业绩\n",
+    "# 过去半年平均业绩\n",
+    "# 过去一年平均业绩\n",
+    "# 去年同期平均业绩"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "test=feature_daypay[feature_daypay.data>='2016-10-18']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 83,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>shop_id</th>\n",
+       "      <th>data</th>\n",
+       "      <th>daypay</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2016-06-22</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2016-06-23</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2016-06-24</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2016-06-25</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2016-06-26</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   shop_id        data  daypay\n",
+       "0        1  2016-06-22      10\n",
+       "1        1  2016-06-23      18\n",
+       "2        1  2016-06-24       5\n",
+       "3        1  2016-06-25      22\n",
+       "4        1  2016-06-26      15"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "feature_daypay.to_csv('../tempfile/feature_daypay.csv')"
+    "feature_daypay.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
